<resources>
    <string name="app_name" translatable="false">PUNPUN</string>
    <string name="key" translatable="false">YOU NEED A KEY FROM https://wall.alphacoders.com/api.php</string>

    <string name="firstPart" translatable="false">get.php?auth=</string>
    <string name="subCategoryMethod" translatable="false">&amp;method=sub_category_list&amp;id=3</string>
    <string name="categoryMethod" translatable="false">&amp;method=category&amp;id=3&amp;info_level=2&amp;page=</string>
    <string name="searchMethod" translatable="false">&amp;method=sub_category&amp;id=</string>
    <string name="searchMethodPersonal" translatable="false">&amp;method=search&amp;term=</string>
    <string name="info_level2_and_page_label" translatable="false">&amp;info_level=2&amp;page=</string>

    ////////////////////////////////// WALLPAPER ////////////////////////////////////////////
    //to store data on SharedPreferences
    <string name="image_view_dp" translatable="false">image_view_dp</string>
    <string name="column_width_pixels" translatable="false">column_width_pixels</string>
    <string name="zoom_value" translatable="false">zoom_value</string>

    // button bar wallpaper
    <string name="share">Compartir</string>
    <string name="download">Descargar</string>
    <string name="next">Siguiente</string>
    <string name="back">Anterior</string>
    <string name="more">Detalles</string>
    <string name="presentation">Presentación</string>
    <string name="cancel_presentation">Detener</string>
    <string name="download_message_11">Descarga no esta aun disponible en dispositivos con android 11</string>
    <string name="downloading">Descargando imagen…</string>
    <string name="downloaded">¡Imagen descargada!</string>
    // top bar wallpaper
    <string name="searchW">Buscar</string>
    <string name="settingsW">Ajustes</string>
    //dialog wallpaper presentation
    <string name="presentation_title">Velocidad de presentación</string>
    <string name="presentation_info_single">segundo entre imagenes</string>
    <string name="presentation_info_plural">segundos entre imagenes</string>


    //button retry
    <string name="retry">Reintentar</string>


    <string name="fail_connection">Ha ocurrido un fallo con la conexión</string>

    <string name="updated">Actualizado</string>
    <string name="not_found">No se ha encontrado</string>
    <string name="share_title">Compartir imagen</string>

    <string name="wallpaper_title">Fotos</string>
    <string name="photos">Fotos</string>
    <string name="photo_min">fotos</string>
    <string name="photo_min_individual">foto</string>
    <string name="animes" translatable="false">Animes</string>
    <string name="mangas" translatable="false">Mangas</string>

    //////////////////////////// ANIME/MANGA////////////////////////////

    <string name="anime_title" translatable="false">Animes</string>
    <string name="manga_title" translatable="false">Mangas</string>


    /////////////////////////// SETTINGS //////////////////////////////
    <string name="dark_mode_on">Modo oscuro activado</string>
    <string name="dark_mode_off">Modo oscuro desactivado</string>
    <string name="dark_label">Modo oscuro</string>
    <string name="visual_settings">Ajustes visuales</string>
    <string name="max_quality_images_on">Calidad máxima activada</string>
    <string name="max_quality_images_off">Calidad optimizada activada</string>
    <string name="max_quality_images_label">Calidad imagenes</string>
    <string name="language_settings">Ajustes de idioma</string>
    <string name="language_label">Idiomas</string>


    <!--- Languages -->
    <string name="spanish">Español</string>
    <string name="english">Ingles</string>
    <string name="users">usuarios</string>
    <string name="episodes">episodios</string>
    <string name="type">Medio</string>
    <string name="ranking">Puesto</string>
    <string name="episodes_m">Episodios</string>
    <string name="score">Nota</string>
    <string name="status">Estado</string>
    <string name="synopsis">Sinopsis</string>
    <string name="duration">Duración</string>
    <string name="date_aired">Fecha de emisión</string>
    <string name="trailer_btn">Ver trailer</string>
    <string name="source">Fuente</string>
    <string name="genre">Generos</string>
    <string name="studies">Estudios</string>
    <string name="producers">Productores</string>
    <string name="volums">volumenes</string>
    <string name="authors">Autores</string>

</resources>