<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundOwn"
    android:elevation="40dp"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_inside_parent"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/backgroundOwn"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_inside"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@mipmap/ic_launcher" />

            <View
                android:id="@+id/gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/gradient_shape" />

            <ProgressBar
                android:id="@+id/progress_bar_circle_image_item"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="#00ffffff"
            android:drawableBottom="@drawable/ic_close"
            android:drawableTint="?attr/switchSelectedOwn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_inside"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="fill_horizontal"
            android:textColor="?attr/textOwn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Steins Gate" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/title_inside">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/star_inside"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginStart="8dp"
                android:src="@drawable/ic_start_full" />

            <TextView
                android:id="@+id/score_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="9.38" />

            <TextView
                android:id="@+id/members_inside"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:textColor="?attr/textOwn"
                android:textSize="12sp"
                tools:text="(1.331.231 usuarios)" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <TextView
                android:id="@+id/episodes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes_m"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/episodes_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="938 episodes" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <TextView
                android:id="@+id/ranking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rank_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="93" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <TextView
                android:id="@+id/type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/type_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Movie" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/status_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Completed" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/rating_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="PG-13 - Teens 13 or older" />
        </LinearLayout>

        <Button
            android:id="@+id/trailer_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="#00ffffff"
            android:text="@string/trailer_btn"
            android:textColor="?attr/textOwn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_inside_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />


        <TextView
            android:id="@+id/synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/synopsis"
            android:textColor="?attr/switchSelectedOwn"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_button" />

        <TextView
            android:id="@+id/synopsis_inside"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/textOwn"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_label"
            tools:text="The self-proclaimed mad scientist Rintarou Okabe rents out a room in a rickety old building in Akihabara, where he indulges himself in his hobby of inventing prospective with fellow lab members: Mayuri Shiina, his air-headed childhood friend, and Hashida Itaru, a perverted hacker nicknamed  The three pass the time by tinkering with their most promising contraption yet, a machine dubbed the which performs the strange function of morphing bananas into piles of green gel. Though miraculous in itself, the phenomenon doesn't provide anything concrete in Okabe's search for a scientific breakthrough; that is, until the lab members are spurred into action by a string of mysterious happenings before stumbling upon an unexpected success\u2014the Phone Microwave can send emails to the past, altering the flow of history. Adapted from the critically acclaimed visual novel by 5pb. and Nitroplus, Steins;Gate takes Okabe through the depths of scientific theory and practicality. Forced across the diverging threads of past and present, Okabe must shoulder the burdens that come with holding the key to the realm of time. [Written by MAL Rewrite]" />


        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">


            <TextView
                android:id="@+id/duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/duration_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="24 min per ep" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">


            <TextView
                android:id="@+id/aired_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_aired"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/aired_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Apr 6, 2011 to Sep 14, 2011" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">


            <TextView
                android:id="@+id/source_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/source_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Visual novel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_inside">

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/genre_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Sci-Fi,Action" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout12"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11">


            <TextView
                android:id="@+id/studios_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studies"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/studios_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Bones" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


            <TextView
                android:id="@+id/producers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producers"
                android:textColor="?attr/switchSelectedOwn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/producers_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/textOwn"
                android:textSize="15sp"
                tools:text="Bones,Bones,Bones" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
